# GreifpunktStudien

./: .gitignore  README.md
src/igus_rebel_ros2/src/igus_rebel_moveit_config/launch/: move_group.launch.py
src/workflow_package/: CMakeLists.txt  package.xml
src/workflow_package/scripts/: check_label_presence_server.py  check_part_presence_server.py  controller_node.py  get_grasp_point_server.py  move_robot_to_pos_server.py  move_to_position_server.py
src/workflow_package/srv/: CheckLabelPresence.srv  CheckPartPresence.srv  GetGraspPoint.srv  MoveTheRobotToPos.srv  MoveToPosition.srv
